Shrink Final checks pill to 2 cells to stop overflow

--- a/app/proposal/proposal.css
+++ b/app/proposal/proposal.css
@@ -156,8 +156,7 @@
 .cal-pill-span {
   position: absolute;
   left: 3px;
-  right: 0;
-  width: calc(300% - 3px);
+  width: calc(200% - 6px);
   z-index: 2;
   text-align: center;
 }
